Финальное задание спринта №6 (Корректировка по ревью):
class InMemoryHistoryManager:
- добавить проверку на null в методе add(Task task);
- добавить проверку node на null и на наличие в списке;
- изменить модификатор доступа к Node first и Node last и linkLast(Task task) на private;
- удалить метод getAll(), реализация метода перенесена в getHistory();
- удалить метод getLast().

class InMemoryHistoryManagerTest
- откорректировать тест shouldLinkLast() из-за удаления метода getLast();
- откорректировать тест shouldLinkLast() из-за удаления getHistoryManager();
- добавлен тест shouldNotContainInEpicDeletedSubtask();
- добавлен тест shouldNotContainInDeletedSubtaskEpicID();

interface HistoryManager:
- удалить метод Task getLast().

interface TaskManager:
- удалить метод getHistoryManager();

class InMemoryTaskManager:
- удалить метод getHistoryManager().

class Subtask:
- добавить метод deleteEpicId().